fzr os testes ( ver pq ta dando erro )

--- a/index.html
+++ b/index.html
@@ -4,23 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="./js/musica.js" defer></script>
     <script src="./js/main.js" defer type="module"></script>
     <title>CRUD-FRON</title>
 </head>
 <body>
     
     <header>
-        <img src="" alt="Logo SENAI">
-        <input type="text" placeholder="" id="pesquisa">
-        <button></button>
     </header>
 
     <main>
-        <div class="container" id="container">
-        </div>
     </main>
 
-    <footer></footer>
+    <footer>
+
+    </footer>
 
 </body>
 </html>
